--- a/css/nav.css
+++ b/css/nav.css
@@ -7,7 +7,7 @@
 
 #nav {
   font-size: 1.6rem;
-  z-index: 100;
+  z-index: 9999;
   width: auto;
   margin: 0;
   padding: 0;
